fixed weird jump when navbar turns sticky for smaller browsers.

--- a/css/style.css
+++ b/css/style.css
@@ -245,6 +245,9 @@ a:focus {
     .navbar-toggler {
         border: none;
     }
+    .hero.nav-sticky {
+        margin-top:3.6rem;
+    }
 }
 
 
